[package]
name        = "stele-sql"
description = "Parser, binder, planner, optimizer — with temporal rewrite rules."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-catalog = { workspace = true }
stele-common  = { workspace = true }
