[package]
name        = "stele-storage"
description = "Append-only columnar segments, row-oriented delta tier, and the WAL — the storage core."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-common = { workspace = true }
thiserror    = { workspace = true }
