[package]
name        = "stele-txn"
description = "MVCC transactions, snapshots, and commit ordering — layered on the append-only store."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
stele-storage = { workspace = true }
stele-common  = { workspace = true }
